fix: clean up CSS formatting; remove extra spaces and ensure consistent styling

--- a/client/src/assets/styleSheet/style.css
+++ b/client/src/assets/styleSheet/style.css
@@ -3,6 +3,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 /* stylelint-enable at-rule-no-unknown */
 
 /* General styles */
@@ -125,7 +127,7 @@
 
 /* Scrollable image row */
 .scroll-row {
-  @apply flex w-full h-full overflow-auto overflow-y-hidden scroll-smooth;
+  @apply flex w-full h-full overflow-auto overflow-y-hidden scroll-smooth ;
 }
 
 
@@ -243,8 +245,8 @@
 
 /* Destination Bar*/
 .destination-section {
-  @apply py-10 px-5 w-full;}
-
+  @apply py-10 px-5 w-full;
+}
 
 
 .destination-title {
@@ -253,13 +255,15 @@
 
 /* Horizontal scroll container */
 .destination-scroll {
-  @apply flex gap-6 overflow-x-auto scroll-smooth  ;
+  @apply flex gap-6 overflow-x-auto scroll-smooth;
 }
 
 /* Box styles */
 .destination-box {
-  @apply min-w-[400px] w-[400px] h-[550px] bg-gray-400 backdrop-blur-3xl rounded-lg shadow-md flex-shrink-0 flex flex-col ;
+  @apply min-w-[350px] w-[400px] h-[550px] bg-gray-400 backdrop-blur-3xl rounded-lg shadow-md flex-shrink-0 flex flex-col;
 }
+
+
 
 .destination-image {
   @apply w-full h-50 object-cover rounded-t-lg;
@@ -295,6 +299,8 @@
 .destination-scroll-btn{
   @apply flex items-center;
 }
+
+
 
 
 /*planning tools*/
